Made custom component that imports svgs to render them inline & changed svgs colors in public folder to 'currentColor' so dark mode works on them too. Fix github clound movement in Socials component.

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -94,7 +94,8 @@
 }
 
 .hobbie-icon {
-	max-width: 75%;
+	aspect-ratio: 1 / 1;
+	width: 75%;
 	color: var(--mario-alt-block-font-color);
 }
 
